[gd_scene load_steps=48 format=3 uid="uid://bkmv2huakex1t"]

[ext_resource type="Script" uid="uid://bxbbiip61nuou" path="res://HUD/GameStart/title_screen.gd" id="1_jdsd0"]
[ext_resource type="Texture2D" uid="uid://bje6nages4ngn" path="res://Art/background.png" id="2_0x0oo"]
[ext_resource type="FontFile" uid="uid://b5ifogfkp4eo5" path="res://HUD/Sniglet.ttf" id="2_fltkk"]
[ext_resource type="Shader" uid="uid://bvluootiexorm" path="res://HUD/GameStart/scroll.gdshader" id="3_hlm5s"]
[ext_resource type="Texture2D" uid="uid://bniigtb3mp3tw" path="res://Art/banner.png" id="4_0x0oo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dne5b"]
shader = ExtResource("3_hlm5s")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ak62o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c5550"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gxaiy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c4asa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0x0oo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ld8dt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s1hci"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c6ldu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7jwoq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kowfx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sbiwp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q7nxf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c6npt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fb44e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kjstp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t2q58"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s12m4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8dh2f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cvfja"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hc3cp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qkk83"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_amnuh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8vxbh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_twyd4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8qtxl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5qo4p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wmltf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y524l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ybgov"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4yi5l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4q30h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_85512"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7vl7n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hcott"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lbxxp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nbwai"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n8qre"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xbaw6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a176x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vte06"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_81ecy"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jdsd0")

[node name="Pattern" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_dne5b")
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1861.0
texture = ExtResource("2_0x0oo")

[node name="Title" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -545.0
offset_top = 66.0
offset_right = 536.0
offset_bottom = 1147.0
grow_horizontal = 2
texture = ExtResource("4_0x0oo")
expand_mode = 1
stretch_mode = 4

[node name="SinglePlayer" type="Button" parent="."]
layout_mode = 0
offset_left = 681.0
offset_top = 858.0
offset_right = 779.0
offset_bottom = 938.0
theme_override_colors/font_color = Color(0.8627451, 0.92156863, 0.6509804, 1)
theme_override_colors/font_pressed_color = Color(0.12941177, 0.14509805, 0.09019608, 1)
theme_override_colors/font_hover_color = Color(0.29411766, 0.3137255, 0.21568628, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 17
theme_override_fonts/font = ExtResource("2_fltkk")
theme_override_font_sizes/font_size = 91
theme_override_styles/normal = SubResource("StyleBoxEmpty_ak62o")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_c5550")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gxaiy")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_c4asa")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0x0oo")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ld8dt")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_s1hci")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_c6ldu")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7jwoq")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_kowfx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_sbiwp")
text = "1P"

[node name="TwoPlayer" type="Button" parent="."]
layout_mode = 0
offset_left = 820.0
offset_top = 857.0
offset_right = 926.0
offset_bottom = 937.0
theme_override_colors/font_color = Color(0.8627451, 0.92156863, 0.6509804, 1)
theme_override_colors/font_pressed_color = Color(0.12941177, 0.14509805, 0.09019608, 1)
theme_override_colors/font_hover_color = Color(0.29411766, 0.3137255, 0.21568628, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 17
theme_override_fonts/font = ExtResource("2_fltkk")
theme_override_font_sizes/font_size = 91
theme_override_styles/normal = SubResource("StyleBoxEmpty_q7nxf")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_c6npt")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fb44e")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_kjstp")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0x0oo")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_t2q58")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_s12m4")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_8dh2f")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_cvfja")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_hc3cp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qkk83")
text = "2P"

[node name="ThreePlayer" type="Button" parent="."]
layout_mode = 0
offset_left = 969.0
offset_top = 858.0
offset_right = 1077.0
offset_bottom = 938.0
theme_override_colors/font_color = Color(0.8627451, 0.92156863, 0.6509804, 1)
theme_override_colors/font_pressed_color = Color(0.12941177, 0.14509805, 0.09019608, 1)
theme_override_colors/font_hover_color = Color(0.29411766, 0.3137255, 0.21568628, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 17
theme_override_fonts/font = ExtResource("2_fltkk")
theme_override_font_sizes/font_size = 91
theme_override_styles/normal = SubResource("StyleBoxEmpty_amnuh")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_8vxbh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_twyd4")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_8qtxl")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0x0oo")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_5qo4p")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_wmltf")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_y524l")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ybgov")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_4yi5l")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4q30h")
text = "3P"

[node name="FourPlayer" type="Button" parent="."]
layout_mode = 0
offset_left = 1112.0
offset_top = 858.0
offset_right = 1223.0
offset_bottom = 938.0
theme_override_colors/font_color = Color(0.8627451, 0.92156863, 0.6509804, 1)
theme_override_colors/font_pressed_color = Color(0.12941177, 0.14509805, 0.09019608, 1)
theme_override_colors/font_hover_color = Color(0.29411766, 0.3137255, 0.21568628, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 17
theme_override_fonts/font = ExtResource("2_fltkk")
theme_override_font_sizes/font_size = 91
theme_override_styles/normal = SubResource("StyleBoxEmpty_85512")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_7vl7n")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hcott")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_lbxxp")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0x0oo")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_nbwai")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_n8qre")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_xbaw6")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_a176x")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_vte06")
theme_override_styles/focus = SubResource("StyleBoxEmpty_81ecy")
text = "4P"

[connection signal="pressed" from="SinglePlayer" to="." method="_on_single_player_pressed"]
[connection signal="pressed" from="TwoPlayer" to="." method="_on_two_player_pressed"]
[connection signal="pressed" from="ThreePlayer" to="." method="_on_three_player_pressed"]
[connection signal="pressed" from="FourPlayer" to="." method="_on_four_player_pressed"]
